Bug 155750 - [test case][regression] (editable) Combobox are too narrow
Summary: [test case][regression] (editable) Combobox are too narrow
Status: RESOLVED FIXED
Alias: None
Product: Oxygen
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Camilla Boemann
URL:
Keywords:
: 179409 180790 180910 181495 181617 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-01-14 15:09 UTC by András Manţia
Modified: 2010-06-02 20:54 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Test file (6.92 KB, text/html)
2008-01-14 15:10 UTC, András Manţia
Details
Oxygen bug in Korganizer/Kontact new Todo (157.44 KB, image/jpeg)
2009-01-06 20:58 UTC, Dario Andres
Details
The same situation after changing to Plastique (157.72 KB, image/jpeg)
2009-01-06 20:59 UTC, Dario Andres
Details
Screenshot of the bug in KHTML part (comment 4 site) (238.26 KB, image/jpeg)
2009-01-13 00:20 UTC, Dario Andres
Details
Updated testcase (simple html) (799 bytes, text/html)
2009-01-13 18:44 UTC, Dario Andres
Details

Note You need to log in before you can comment on or make changes to this bug.
Description András Manţia 2008-01-14 15:09:35 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources

See the attached example:the listbox is not wide enough and is impossible to select an item, because you don't see the text. This is a regression from 3.5.x.
Comment 1 András Manţia 2008-01-14 15:10:44 UTC
Created attachment 23029 [details]
Test file
Comment 2 András Manţia 2008-05-10 17:07:38 UTC
Still present in trunk.
Comment 3 Dario Andres 2008-12-21 00:22:35 UTC
I can't reproduce this bug using current trunk

The listbox has the same width as in Firefox and all the text entrys are visible and selectable

Here using:

Qt: 4.4.3
KDE: 4.1.85 (KDE 4.1.85 (KDE 4.2 Beta2))
kdelibs svn rev. 899135 / kdebase svn rev. 899135
on ArchLinux x86_64 - Kernel 2.6.27.8

Can anyone still reproduce this with a recent KDE version? (4.1.3 / 4.2beta2 / 4.2svn) ? Thanks :) 
Comment 4 András Manţia 2008-12-21 14:08:44 UTC
The testcase indeed works, there is a similar issue though on http://wizzair.com/ (departure date selection combo), but only with oxygen...
Comment 5 Dario Andres 2008-12-21 16:28:48 UTC
Here using:

Qt: 4.4.3
KDE: 4.1.85 (KDE 4.1.85 (KDE 4.2 Beta2))
kdelibs svn rev. 899634 / kdebase svn rev. 899635
on ArchLinux x86_64 - Kernel 2.6.27.8

I can confirm that the combobox for selecting date (day number of the month), shows "..." in all the entries while displayed using Oxygen style (this doesn't happen with Plastique style)
Comment 6 Dario Andres 2009-01-06 20:58:06 UTC
Mh, I have experienced this in Kontact/Korganizer too.

In the New Todo dialog, the combobox for selecting the hour has the same problem. If Kontact is started with Oxygen you can reproduce this bug. If you change to Plastique, the combobox is rendered OK and the hours can be seen OK, however when changing again to Oxygen, the combobox list is OK. 

So it seems to be a bug with delimiting the combobox list at start.

Here using:

Qt: 4.4.3 + qt-copy-patches-889120
KDE: 4.1.87 (KDE 4.1.87 (KDE 4.2 >= 20090101))
kdelibs svn rev. 906436 / kdebase svn rev. 906436
on ArchLinux x86_64 - Kernel 2.6.27.10
Comment 7 Dario Andres 2009-01-06 20:58:43 UTC
Created attachment 29980 [details]
Oxygen bug in Korganizer/Kontact new Todo
Comment 8 Dario Andres 2009-01-06 20:59:13 UTC
Created attachment 29981 [details]
The same situation after changing to Plastique
Comment 9 Camilla Boemann 2009-01-12 22:55:00 UTC
reassigning to korganizer then.

Which is probably setting a fixed size for that widget somehow
Comment 10 Dario Andres 2009-01-13 00:17:00 UTC
@Casper: I think the bug may be in Oxygen/KStyles as the original report was for a webpage (KHTML control) , and I also seen this bug in another applications.
Comment 11 Dario Andres 2009-01-13 00:20:11 UTC
Created attachment 30202 [details]
Screenshot of the bug in KHTML part (comment 4 site)
Comment 12 Dario Andres 2009-01-13 18:44:04 UTC
Created attachment 30218 [details]
Updated testcase (simple html)
Comment 13 Sergio Martins 2009-01-13 23:39:56 UTC
*** Bug 179409 has been marked as a duplicate of this bug. ***
Comment 14 Sergio Martins 2009-01-13 23:47:52 UTC
Reassigning to oxygen after talking to boemann.
Comment 15 Camilla Boemann 2009-01-14 01:03:59 UTC
SVN commit 910706 by boemann:

Fix combobox popup too narrow

BUG:155750



 M  +3 -0      oxygen.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=910706
Comment 16 Christophe Marin 2009-01-15 10:47:40 UTC
*** Bug 180790 has been marked as a duplicate of this bug. ***
Comment 17 Sergio Martins 2009-01-16 02:52:57 UTC
*** Bug 180910 has been marked as a duplicate of this bug. ***
Comment 18 dag 2009-01-16 08:12:38 UTC
Patch tested. Works fine :-))
Thank you
Comment 19 Christophe Marin 2009-01-21 15:04:37 UTC
*** Bug 181495 has been marked as a duplicate of this bug. ***
Comment 20 Allen Winter 2009-01-23 21:12:38 UTC
*** Bug 181617 has been marked as a duplicate of this bug. ***
Comment 21 András Manţia 2010-06-02 14:34:06 UTC
This bug reappeared in trunk.
Comment 22 Hugo Pereira Da Costa 2010-06-02 20:54:44 UTC
closing again. 
fixed with r1133847.