Fix combobox popup too narrow

BUG:155750


svn path=/trunk/KDE/kdebase/runtime/kstyles/; revision=910706